--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -10,3 +10,31 @@
 .color-grey {
   color: $gray;
 }
+
+.line-height-1 {
+  line-height: 1;
+}
+
+.line-height-1-2 {
+  line-height: 1.2;
+}
+
+.line-height-1-4 {
+  line-height: 1.4;
+}
+
+.font-size-lg {
+  font-size: $font-size-lg;
+}
+
+.font-size-sm {
+  font-size: $font-size-sm;
+}
+
+.font-size-xs {
+  font-size: $font-size-xs;
+}
+
+.font-size-base {
+  font-size: $font-size-base;
+}
